# qtvncclient

./: .cmake.conf
.github/workflows/: ci.yml
examples/: CMakeLists.txt
examples/mcp-vnc/: CMakeLists.txt  main.cpp  tools.cpp  tools.h  vncwidget.cpp  vncwidget.h
examples/vncclient/: CMakeLists.txt  mainwindow.cpp
examples/vncclient/vncwatcher/: mainwindow.cpp  mainwindow.ui
src/vncclient/: CMakeLists.txt  qvncclient.cpp  qvncclient.h  qvncdes_p.h
tests/auto/vncclient/: CMakeLists.txt
tests/auto/vncclient/qvncclient/: tst_qvncclient.cpp
tests/auto/vncclient/qvncdes/: CMakeLists.txt  tst_qvncdes.cpp
